# OceanFS

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  THANKS.md  build.sh  run-docker.sh
OceanFS/: main.m
OceanFS.xcodeproj/: project.pbxproj
OceanFS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OceanFS.xcodeproj/xcuserdata/david.xcuserdatad/xcschemes/: OceanFS.xcscheme  xcschememanagement.plist
blocksd/: CMakeLists.txt
blocksd/src/: ipc.c  ipc.h  main.c
lib/: CMakeLists.txt
lib/util/: CMakeLists.txt  global.h  ipc.c  ipc.h  uuid4.c
salt/: CMakeLists.txt
salt/src/: config.c  config.h  ipc.c  ipc.h  main.c  parse.h  storage.h  usage.h
simpleblocksd/: CMakeLists.txt  version.h.in
simpleblocksd/src/: blocks.h  global.h  ipc.c  ipc.h  list.h  log.c  main.c  md5.c  storage.c  storage.h  usage.h  uuid4.h
tests/: cluster_config.flat.json  cluster_config.json  sbd_test1.c
tools/: CMakeLists.txt
util/: global.h  log.c  log.h
